Changed table heading colour to lilac

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
   }
   
   thead {
-    background-color: lightgoldenrodyellow;
+    background-color: rgb(213, 210, 250);
   }
   
   td {
